# haskell_pascal_interpreter

./: CHANGELOG.md  pascal-parser.cabal
app/: Interpreter.hs  Lexer.hs  Main.hs  Parser.hs
programs/: program1.pas  program2.pas  program3.pas
test/: InterpreterSpec.hs  Main.hs
