cabal-version:      2.4
name:               pascal-parser
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Viktor Diezel
maintainer:         viktor.diezel@posteo.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable pascal-parser
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      Lexer
      Parser
      Interpreter

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      base ^>=4.16.4.0,
      text,
      bytestring,
      regex-tdfa,
      mtl,
      containers
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite interpreter-tests
    type:                exitcode-stdio-1.0
    main-is:             Main.hs
    other-modules:
      Lexer
      Parser
      Interpreter
    hs-source-dirs:   test, app
    build-depends:
      base ^>=4.16.4.0,
      text,
      bytestring,
      regex-tdfa,
      mtl,
      containers,
      HUnit
    default-language:    Haskell2010